# Fund-Assessment

./: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  README.md  control.ps1  control.sh  docker-compose.yml  fly.toml  install.bat  install_deps.py  pyproject.toml  railway.json  render.yaml  requirements-minimal.txt  requirements.txt  setup.ps1  start.bat  start.ps1  start.sh  vercel.json  开发图片.docx
config/: settings.yaml  strategies.yaml
scripts/: analyze_trades.py  backtest.py  cb_monitor.py  check_watchlist.py  generate_daily_report.py  limit_up_monitor.py  predict_promotion.py  prepare_watchlist.py  quant.py  scan_new_high.py  scan_pre_limit_up.py  update_positions.py  verify_backtest.py  verify_simulated.py
src/agents/: __init__.py  base.py  fundamental_agent.py  news_agent.py  research_team.py  sentiment_agent.py  technical_agent.py  trading_manager.py
src/analysis/: __init__.py  capital_flow.py  fundamental.py  news.py  sentiment.py  technical.py
src/core/: __init__.py  ai_service.py  backtest.py  cache.py  data_source.py  data_source_v2.py  data_validator.py  executor.py  llm_router.py  response.py  risk_manager.py  scheduler.py
src/monitor/: __init__.py  alert.py  daily_flow.py
src/strategies/: __init__.py  a_stock_analyst.py  bspro_quant.py  cb_t0_sniper.py  limit_up.py  stock_monitor.py  trading_quant.py
src/utils/: __init__.py  config.py  logger.py  notify.py
tests/: conftest.py  test_api.py  test_data_validator.py  test_llm_router.py
web/: api.py
web/routes/: agent.py  config.py  dashboard.py  market.py  monitor.py  trade.py  (+1 more)
(+2 files in other folders)
