[project]
name = "fund-assessment"
version = "1.0.0"
description = "OpenClaw quantitative trading system"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.2",
    "requests==2.32.3",
    "pandas==2.2.3",
    "numpy==2.2.6",
    "loguru==0.7.3",
    "pydantic==2.11.4",
    "python-dotenv==1.1.0",
    "beautifulsoup4==4.13.4",
    "html5lib==1.1",
    "pyyaml==6.0.2",
    "apscheduler==3.11.0",
]

[project.optional-dependencies]
market-data = [
    "akshare==1.16.94",
    "tushare==1.4.18",
    "tdxpy==0.1.2",
    "mootdx==0.5.10",
]
technical = [
    "stockstats==0.7.0",
    "pandas-ta==0.3.14b",
]
full = [
    "fund-assessment[market-data,technical]",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*", "web*", "config*"]

[tool.setuptools.package-data]
config = ["*.yaml"]
